// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReceiptRow /> renders Failure 1`] = `
<div
  className="receipt-row row no-gutters"
>
  <div
    className="col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="receipt-row-title receipt-hash-title col"
      >
        <b
          className="jsx-4267416232"
        >
          Receipt ID:
        </b>
      </div>
      <div
        className="receipt-row-receipt-hash ml-auto text-right col"
        title="222aLh5pzaeuiq4VVnmgghT6RzCRuiNftkJCZmVQv222"
      >
        222aL…JCZmVQv222
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Predecessor ID:
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="signer2.test"
      >
        signer2.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receiver ID:
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="receiver2.test"
      >
        receiver2.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Gas Burned:
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        123 Mgas
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Tokens Burned:
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          0
           Ⓝ
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <div
          className="action-sparse-row mx-0  row no-gutters"
        >
          <div
            className="col-auto"
          >
            <div
              className="jsx-1246332424 action-row-img"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 18l9-9-9-9zm18-9L9 0v18z"
                  fill="#8dd4bd"
                />
              </svg>
            </div>
          </div>
          <div
            className="action-row-details col"
          >
            <div
              className="action-row-message row no-gutters"
            >
              <div
                className="col-md-8 col-7"
              >
                <div
                  className="row no-gutters"
                >
                  <div
                    className="action-row-title col"
                  >
                    Transferred 
                    <span
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      &lt;0.00001
                       Ⓝ
                    </span>
                     to 
                    <a
                      className="jsx-3150401870 account-link"
                      href="/accounts/receiver2.test"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      receiver2.test
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-status col"
      >
        Empty result
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <pre
          className="jsx-4267416232"
        >
          LOG: Counter is now: 1
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReceiptRow /> renders SuccessReceiptId 1`] = `
<div
  className="receipt-row row no-gutters"
>
  <div
    className="col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="receipt-row-title receipt-hash-title col"
      >
        <b
          className="jsx-4267416232"
        >
          Receipt ID:
        </b>
      </div>
      <div
        className="receipt-row-receipt-hash ml-auto text-right col"
        title="222aLh5pzaeuiq4VVnmgghT6RzCRuiNftkJCZmVQv222"
      >
        222aL…JCZmVQv222
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Predecessor ID:
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="signer2.test"
      >
        signer2.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receiver ID:
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="receiver2.test"
      >
        receiver2.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Gas Burned:
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        222222 gas
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Tokens Burned:
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          &lt;0.00001
           Ⓝ
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <div
          className="action-sparse-row mx-0  row no-gutters"
        >
          <div
            className="col-auto"
          >
            <div
              className="jsx-1246332424 action-row-img"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 9l6 6L9 0zm12-6L9 18l9-9z"
                  fill="#ccc"
                />
              </svg>
            </div>
          </div>
          <div
            className="action-row-details col"
          >
            <div
              className="action-row-message row no-gutters"
            >
              <div
                className="col-md-8 col-7"
              >
                <div
                  className="row no-gutters"
                >
                  <div
                    className="action-row-title col"
                  >
                    Called method: 'vote' in contract: 
                    <a
                      className="jsx-3150401870 account-link"
                      href="/accounts/receiver2.test"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      receiver2.test
                    </a>
                    <dl>
                      <dt>
                        Arguments:
                      </dt>
                      <dd>
                        <div>
                          <div
                            style={
                              Object {
                                "display": "block",
                                "height": "0px",
                                "overflow": "hidden",
                              }
                            }
                          >
                            <textarea
                              className="jsx-2493677144 code-preview"
                              readOnly={true}
                              value="{
  \\"request\\": {
    \\"left\\": 30205312,
    \\"right\\": 29402342
  },
  \\"response\\": \\"SelectedRight\\"
}"
                            />
                          </div>
                          <div
                            onClick={[Function]}
                          >
                            <div
                              style={
                                Object {
                                  "float": "left",
                                }
                              }
                            >
                              Show more
                            </div>
                          </div>
                        </div>
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-status col"
      >
        <i>
          Failure: 
        </i>
        <pre>
          {
  "error_message": "Exceeded the prepaid gas.",
  "error_type": "ActionError::FunctionCallError"
}
        </pre>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        No logs
      </div>
    </div>
  </div>
</div>
`;

exports[`<ReceiptRow /> renders SuccessValue 1`] = `
<div
  className="receipt-row row no-gutters"
>
  <div
    className="col"
  >
    <div
      className="row no-gutters"
    >
      <div
        className="receipt-row-title receipt-hash-title col"
      >
        <b
          className="jsx-4267416232"
        >
          Receipt ID:
        </b>
      </div>
      <div
        className="receipt-row-receipt-hash ml-auto text-right col"
        title="9uZxS2cuZv7yphcidRiwNqDayMxcVRE1zHkAmwrHr1vs"
      >
        9uZxS…kAmwrHr1vs
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Predecessor ID:
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="signer.test"
      >
        signer.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Receiver ID:
      </div>
      <div
        className="receipt-row-receipt-hash col"
        title="receiver.test"
      >
        receiver.test
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Gas Burned:
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        100000 gas
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-title col"
      >
        Tokens Burned:
      </div>
      <div
        className="receipt-row-receipt-hash col"
      >
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          &lt;0.00001
           Ⓝ
        </span>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        <div
          className="action-sparse-row mx-0  row no-gutters"
        >
          <div
            className="col-auto"
          >
            <div
              className="jsx-1246332424 action-row-img"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 9l6 6L9 0zm12-6L9 18l9-9z"
                  fill="#ccc"
                />
              </svg>
            </div>
          </div>
          <div
            className="action-row-details col"
          >
            <div
              className="action-row-message row no-gutters"
            >
              <div
                className="col-md-8 col-7"
              >
                <div
                  className="row no-gutters"
                >
                  <div
                    className="action-row-title col"
                  >
                    Called method: 'confirm' in contract: 
                    <a
                      className="jsx-3150401870 account-link"
                      href="/accounts/receiver.test"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                    >
                      receiver.test
                    </a>
                    <dl>
                      <dt>
                        Arguments:
                      </dt>
                      <dd>
                        <div>
                          <div
                            style={
                              Object {
                                "display": "block",
                                "height": "0px",
                                "overflow": "hidden",
                              }
                            }
                          >
                            <textarea
                              className="jsx-2493677144 code-preview"
                              readOnly={true}
                              value="{
  \\"request_id\\": 12
}"
                            />
                          </div>
                          <div
                            onClick={[Function]}
                          >
                            <div
                              style={
                                Object {
                                  "float": "left",
                                }
                              }
                            >
                              Show more
                            </div>
                          </div>
                        </div>
                      </dd>
                    </dl>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-status col"
      >
        No result
      </div>
    </div>
    <div
      className="receipt-row-section row no-gutters"
    >
      <div
        className="receipt-row-text col"
      >
        No logs
      </div>
    </div>
    <div
      className="executed-receipt-row row no-gutters"
    >
      <div
        className="col"
      >
        <div
          className="receipt-row row no-gutters"
        >
          <div
            className="col"
          >
            <div
              className="row no-gutters"
            >
              <div
                className="receipt-row-title receipt-hash-title col"
              >
                <b
                  className="jsx-4267416232"
                >
                  Receipt ID:
                </b>
              </div>
              <div
                className="receipt-row-receipt-hash ml-auto text-right col"
                title="A8HaLh5pzaeuiq4VVnmgghT6RzCRuiNftkJCZmVQvN3v"
              >
                A8HaL…JCZmVQvN3v
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Predecessor ID:
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="signer.test"
              >
                signer.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Receiver ID:
              </div>
              <div
                className="receipt-row-receipt-hash col"
                title="receiver.test"
              >
                receiver.test
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Gas Burned:
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                999 Mgas
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-title col"
              >
                Tokens Burned:
              </div>
              <div
                className="receipt-row-receipt-hash col"
              >
                <span
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  &lt;0.00001
                   Ⓝ
                </span>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                <div
                  className="action-sparse-row mx-0  row no-gutters"
                >
                  <div
                    className="col-auto"
                  >
                    <div
                      className="jsx-1246332424 action-row-img"
                    >
                      <svg
                        viewBox="0 0 18 18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 9l6 6L9 0zm12-6L9 18l9-9z"
                          fill="#ccc"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="action-row-details col"
                  >
                    <div
                      className="action-row-message row no-gutters"
                    >
                      <div
                        className="col-md-8 col-7"
                      >
                        <div
                          className="row no-gutters"
                        >
                          <div
                            className="action-row-title col"
                          >
                            Called method: 'unstake' in contract: 
                            <a
                              className="jsx-3150401870 account-link"
                              href="/accounts/receiver.test"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                            >
                              receiver.test
                            </a>
                            <dl>
                              <dt>
                                Arguments:
                              </dt>
                              <dd>
                                <div>
                                  <div
                                    style={
                                      Object {
                                        "display": "block",
                                        "height": "0px",
                                        "overflow": "hidden",
                                      }
                                    }
                                  >
                                    <textarea
                                      className="jsx-2493677144 code-preview"
                                      readOnly={true}
                                      value="{
  \\"amount\\": \\"17560000000000000000000000000\\"
}"
                                    />
                                  </div>
                                  <div
                                    onClick={[Function]}
                                  >
                                    <div
                                      style={
                                        Object {
                                          "float": "left",
                                        }
                                      }
                                    >
                                      Show more
                                    </div>
                                  </div>
                                </div>
                              </dd>
                            </dl>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-status col"
              >
                <i>
                  SuccessReceiptId: 
                </i>
                <pre>
                  A5oSQ6z71zWi3X1KFy9xhNzyjj8bQx4wwboWUMnK1111
                </pre>
              </div>
            </div>
            <div
              className="receipt-row-section row no-gutters"
            >
              <div
                className="receipt-row-text col"
              >
                <pre
                  className="jsx-4267416232"
                >
                  LOG: Counter is now: 1
                </pre>
              </div>
            </div>
            <div
              className="executed-receipt-row row no-gutters"
            >
              <div
                className="col"
              >
                <div
                  className="receipt-row row no-gutters"
                >
                  <div
                    className="col"
                  >
                    <div
                      className="row no-gutters"
                    >
                      <div
                        className="receipt-row-title receipt-hash-title col"
                      >
                        <b
                          className="jsx-4267416232"
                        >
                          Receipt ID:
                        </b>
                      </div>
                      <div
                        className="receipt-row-receipt-hash ml-auto text-right col"
                        title="A5oSQ6z71zWi3X1KFy9xhNzyjj8bQx4wwboWUMnK1111"
                      >
                        A5oSQ…oWUMnK1111
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Predecessor ID:
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                        title="signer.test"
                      >
                        signer.test
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Receiver ID:
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                        title="receiver.test"
                      >
                        receiver.test
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Gas Burned:
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        55 Mgas
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Tokens Burned:
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        <span
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          &lt;0.00001
                           Ⓝ
                        </span>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-text col"
                      >
                        <div
                          className="action-sparse-row mx-0  row no-gutters"
                        >
                          <div
                            className="col-auto"
                          >
                            <div
                              className="jsx-1246332424 action-row-img"
                            >
                              <svg
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 9l6 6L9 0zm12-6L9 18l9-9z"
                                  fill="#ccc"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            className="action-row-details col"
                          >
                            <div
                              className="action-row-message row no-gutters"
                            >
                              <div
                                className="col-md-8 col-7"
                              >
                                <div
                                  className="row no-gutters"
                                >
                                  <div
                                    className="action-row-title col"
                                  >
                                    Called method: 'unstake' in contract: 
                                    <a
                                      className="jsx-3150401870 account-link"
                                      href="/accounts/receiver.test"
                                      onClick={[Function]}
                                      onMouseEnter={[Function]}
                                    >
                                      receiver.test
                                    </a>
                                    <dl>
                                      <dt>
                                        Arguments:
                                      </dt>
                                      <dd>
                                        <div>
                                          <div
                                            style={
                                              Object {
                                                "display": "block",
                                                "height": "0px",
                                                "overflow": "hidden",
                                              }
                                            }
                                          >
                                            <textarea
                                              className="jsx-2493677144 code-preview"
                                              readOnly={true}
                                              value="{
  \\"amount\\": \\"17560000000000000000000000000\\"
}"
                                            />
                                          </div>
                                          <div
                                            onClick={[Function]}
                                          >
                                            <div
                                              style={
                                                Object {
                                                  "float": "left",
                                                }
                                              }
                                            >
                                              Show more
                                            </div>
                                          </div>
                                        </div>
                                      </dd>
                                    </dl>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-status col"
                      >
                        Empty result
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-text col"
                      >
                        No logs
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="executed-receipt-row row no-gutters"
            >
              <div
                className="col"
              >
                <div
                  className="receipt-row row no-gutters"
                >
                  <div
                    className="col"
                  >
                    <div
                      className="row no-gutters"
                    >
                      <div
                        className="receipt-row-title receipt-hash-title col"
                      >
                        <b
                          className="jsx-4267416232"
                        >
                          Receipt ID:
                        </b>
                      </div>
                      <div
                        className="receipt-row-receipt-hash ml-auto text-right col"
                        title="A5oSQ6z71zWi3X1KFy9xhNzyjj8bQx4wwboWUMnK2222"
                      >
                        A5oSQ…oWUMnK2222
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Predecessor ID:
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                        title="signer.test"
                      >
                        signer.test
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Receiver ID:
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                        title="receiver.test"
                      >
                        receiver.test
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Gas Burned:
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        444 Ggas
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-title col"
                      >
                        Tokens Burned:
                      </div>
                      <div
                        className="receipt-row-receipt-hash col"
                      >
                        <span
                          onBlur={[Function]}
                          onFocus={[Function]}
                          onMouseOut={[Function]}
                          onMouseOver={[Function]}
                        >
                          &lt;0.00001
                           Ⓝ
                        </span>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-text col"
                      >
                        <div
                          className="action-sparse-row mx-0  row no-gutters"
                        >
                          <div
                            className="col-auto"
                          >
                            <div
                              className="jsx-1246332424 action-row-img"
                            >
                              <svg
                                viewBox="0 0 18 18"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M0 9l6 6L9 0zm12-6L9 18l9-9z"
                                  fill="#ccc"
                                />
                              </svg>
                            </div>
                          </div>
                          <div
                            className="action-row-details col"
                          >
                            <div
                              className="action-row-message row no-gutters"
                            >
                              <div
                                className="col-md-8 col-7"
                              >
                                <div
                                  className="row no-gutters"
                                >
                                  <div
                                    className="action-row-title col"
                                  >
                                    Called method: 'on_staking_pool_unstake' in contract: 
                                    <a
                                      className="jsx-3150401870 account-link"
                                      href="/accounts/receiver.test"
                                      onClick={[Function]}
                                      onMouseEnter={[Function]}
                                    >
                                      receiver.test
                                    </a>
                                    <dl>
                                      <dt>
                                        Arguments:
                                      </dt>
                                      <dd>
                                        <div>
                                          <div
                                            style={
                                              Object {
                                                "display": "block",
                                                "height": "0px",
                                                "overflow": "hidden",
                                              }
                                            }
                                          >
                                            <textarea
                                              className="jsx-2493677144 code-preview"
                                              readOnly={true}
                                              value="{
  \\"amount\\": \\"17560000000000000000000000000\\"
}"
                                            />
                                          </div>
                                          <div
                                            onClick={[Function]}
                                          >
                                            <div
                                              style={
                                                Object {
                                                  "float": "left",
                                                }
                                              }
                                            >
                                              Show more
                                            </div>
                                          </div>
                                        </div>
                                      </dd>
                                    </dl>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-status col"
                      >
                        Empty result
                      </div>
                    </div>
                    <div
                      className="receipt-row-section row no-gutters"
                    >
                      <div
                        className="receipt-row-text col"
                      >
                        No logs
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
